add sort by checked

--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@
         <a href="https://t.me/ukrmova_belarus" class="link" target="blank">
           <i class="fab fa-telegram"></i>Українська мова для білорусів</a>
       </div>
-      <h3>Акции солидарности по воскресеньям будут анонсироваться в телеграм-чате <a href="https://t.me/bellviv" class="link" target="blank"><i class="fab fa-telegram"></i> Беларусы ў Львове</a>.</h3>
+      <h3>Акции солидарности по воскресеньям будут анонсироваться в телеграм-чате 
+        <a href="https://t.me/bellviv" class="link" target="blank"><i class="fab fa-telegram"></i> Беларусы ў Львове</a>.</h3>
       <!-- <img class="redzone__image" src="./img/redzone.jpg" alt="Червона зона з 26 січня на Львівщині"> -->
     </div>
   </section>
-  <footer class="container">
+  <footer class="container footer__container">
     <div class="footer__section">
       <p class="footer__about">Контент для сайта взят на основании
         <a href="https://docs.google.com/document/d/1SubsQeAm-wpspnxqQE3MNbXRYWxPuCvB0utG08wojWQ/edit?usp=sharing"
