--- a/money.html
+++ b/money.html
@@ -12,9 +12,9 @@
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- <link
+    <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-        rel="stylesheet"> -->
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Банки, карточки, снятие наличных</title>
 </head>
